# cFSM

./: CMakeLists.txt  README.md  simple.c
.github/workflows/: build.yaml
lib/: CMakeLists.txt  fsm.c  fsm.h
